--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </style>
 </head>
 <body>
-    <h1><strong>Calculadora Simple</strong></h1>
+    <h1><strong>Calculadora Simple - Giuliano Crenna</strong></h1>
     <br>
 
     <div class="calculadora">
